PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/Async.pf
module DataStructures {

    fun foo() : Int {
        return 4
    }

    fun main() : Int {
        x Int = async foo()

        Int result
        async {
            result = foo() + foo()
        }

        x = result

        erg Int = foo() + async foo()

        return 0
    }
}