PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Function_no_return_value.pf
module DataStructures{

     fun foo(Int input){
        return input + 2
    }

    mainFun(){
        return 0
    }
}